Fixed white space at bottom of register page by removing overflows in css

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,5 +1,7 @@
-
 /*Full page */
+.split-screen, .left, .right {
+    overflow: hidden;
+}
 
 .split-screen {
     display: flex;
